--- a/right.html
+++ b/right.html
@@ -11,10 +11,11 @@ padding:20px; text-align:center;background-color:#c0c0c0;}
 <div class="right">
 <h3>Only for Registered Students</h3>
 <a href="student-leadership.html"><h4>Students' Leadership</h4></a>
-<a href="https://kplus712.github.io/UKSS-/"><h4>Students' Election</h4></a>
+<a href="https://kplus712.github.io/UKSS-/"target="_blank"><h4>Students' Election</h4></a>
 <a href="students-admins.html"><h4>Students Admins</h4></a>
 <h3>For Registered and Former Students</h3>
 <a href="students-comments.html"><h4>Students' Comments</h4></a>
 </div>
 </body>
+
 </html>
