--- a/left.html
+++ b/left.html
@@ -14,8 +14,9 @@ padding:20px; text-align:center;background-color:#c0c0c0;}
 <a href="subjects.html"><h4>Registered Subjects</h4></a>
 <a href="academic.html"><h4>Academic Issues</h4></a>
 <a href="results.html"><h4>Student Results</h4></a>
-<a href="parent-comment.html"><h4>Parents' Comments</h4></a>
+<a href="parent-comment.html" target="_blank"><h4>Parents' Comments</h4></a>
 
 </div>
 </body>
+
 </html>
