--- a/middle.html
+++ b/middle.html
@@ -10,7 +10,7 @@ padding:20px; text-align:center;background-color:#808080;}
 <body>
 <div class="middlle">
 <h3>School Background</h3>
-<a href="biography.html"><h4>School Biography</h4></a>
+<a href="biography.html"target="_blank"><h4>School Biography</h4></a>
 <a href="school-administration.html"><h4>School Administration</h4></a>
 <a href="student-details.html"><h4>Students' Details</h4></a>
 <a href="school-events.html"><h4>New Events</h4></a>
@@ -19,3 +19,4 @@ padding:20px; text-align:center;background-color:#808080;}
 </body>
 
 </html>
+
