Fix HTML structure and add target attributes

--- a/left.html
+++ b/left.html
@@ -10,7 +10,7 @@ padding:20px; text-align:center;background-color:#c0c0c0;}
 <body>
 <div class="left">
 <h2>Administration Issues</h2>
-<a href="department.html"><h4>Head of Departments</h4></a>
+<a href="department.html" target="_blank"><h4>Departments</h4></a>
 <a href="subjects.html"><h4>Registered Subjects</h4></a>
 <a href="academic.html"><h4>Academic Issues</h4></a>
 <a href="results.html"><h4>Student Results</h4></a>
@@ -20,3 +20,4 @@ padding:20px; text-align:center;background-color:#c0c0c0;}
 </body>
 
 </html>
+
