--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>www.ukss.ac.tz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <frameset rows="27%,53%,20%">
 <frame src="header.html">
@@ -14,4 +15,5 @@
 </frameset>
 <frame src="footer.html">
 </frameset>
+
 </html>
