--- a/middle.html
+++ b/middle.html
@@ -4,7 +4,7 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:5px;
-padding:20px; text-align:center;background-color:#808080;}
+padding:20px; text-align:center;background-color:rgba(255,0,0,0.5);}
 </style>
 </head>
 <body>
@@ -19,4 +19,5 @@ padding:20px; text-align:center;background-color:#808080;}
 </body>
 
 </html>
+
 
