--- a/left.html
+++ b/left.html
@@ -4,7 +4,7 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:5px;
-padding:20px; text-align:center;background-color:#c0c0c0;}
+padding:20px; text-align:center;background-color:#c0c0c0;font-size:50px;}
 </style
 </head>
 <body>
@@ -20,4 +20,5 @@ padding:20px; text-align:center;background-color:#c0c0c0;}
 </body>
 
 </html>
+
 
