Refactor left.html with updated styles and structure
Updated the HTML structure and styling for left.html.

--- a/left.html
+++ b/left.html
@@ -4,8 +4,8 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:5px;
-padding:20px; text-align:center;background-color:#c0c0c0;font-size:50px;}
-</style
+padding:20px; text-align:center;background-color:#c0c0c0;font-size:25px;}
+</style>
 </head>
 <body>
 <div class="left">
@@ -20,5 +20,6 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:50px;}
 </body>
 
 </html>
+
 
 
