Update font size in right.html
Increased font size for better readability.

--- a/right.html
+++ b/right.html
@@ -4,7 +4,7 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:5px;
-padding:20px; text-align:center;background-color:#c0c0c0;}
+padding:20px; text-align:center;background-color:#c0c0c0;font-size:25px;}
 </style>
 </head>
 <body>
@@ -19,3 +19,4 @@ padding:20px; text-align:center;background-color:#c0c0c0;}
 </body>
 
 </html>
+
