--- a/footer.html
+++ b/footer.html
@@ -4,7 +4,7 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:0; padding:0;
-background-color:#808080; padding:2px; text-align:center;}
+background-color:#808080; padding:2px; text-align:center;font-size:20px;}
 </style>
 </head>
 <body>
@@ -17,4 +17,5 @@ Twitter:<a href="www.twitter.com/ukss">x</a>
  Phone:07........</h6></marquee>
 </div>
 </body>
+
 </html>
