--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <head>
 <title>www.ukss.ac.tz</title>
 <style>
-body{font-family:Arial,sans-serif; margin:0; padding:0;background-color:#008080; padding:20px; text-align:center;}
+body{font-family:Arial,sans-serif; margin:0; padding:0;background-color:#008080; padding:20px; text-align:center;font-size:27px;}
 </style>
 </head>
 <body>
@@ -16,4 +16,5 @@ Welcome at Umoja King'ori Secondary School
 <h3>Our Motto: Education for Execellency, Dicipline and Unity </h3>
 </div>
 </body>
+
 </html>
