Revise Administration Issues to Administration Site
Updated headings and link text for clarity.

--- a/left.html
+++ b/left.html
@@ -9,17 +9,18 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:25px;}
 </head>
 <body>
 <div class="left">
-<h2>Administration Issues</h2>
+<h2>Administration Site</h2>
 <a href="department.html" target="_blank"><h4>Departments</h4></a>
 <a href="subjects.html"><h4>Registered Subjects</h4></a>
 <a href="academic.html"><h4>Academic Issues</h4></a>
-<a href="results.html"><h4>Student Results</h4></a>
-<a href="parent-comment.html" target="_blank"><h4>Parents' Comments</h4></a>
+<a href="results.html"><h4>Matokeo Ya Mwanafunzi</h4></a>
+<a href="parent-comment.html" target="_blank"><h4>Maoni Ya Mzazi</h4></a>
 
 </div>
 </body>
 
 </html>
+
 
 
 
