--- a/footer.html
+++ b/footer.html
@@ -9,13 +9,14 @@ background-color:#808080; padding:2px; text-align:center;font-size:20px;}
 </head>
 <body>
 <div class="footer">
-<h5>Contacts Us &copy:ukss</h5><marquee>
-<h6>Facebook:<a href="www.facebook.com/ukss">ukss_facebook</a> 
+<h5>Contacts Us &copy:ukss</h5>
+ <marquee>
+Facebook:<a href="www.facebook.com/ukss">ukss_facebook</a> 
 Twitter:<a href="www.twitter.com/ukss">x</a> 
  Instagram:<a href="www.instagram.com/ukss">ukss_insta story</a> 
  YouTube:<a href="www.youtube.com/ukss">ukss_youtube</a>  
- Phone:07........</h6></marquee>
-</div>
+ Phone:07........
+</marquee>
 </body>
-
 </html>
+
