--- a/header.html
+++ b/header.html
@@ -3,7 +3,7 @@
 <head>
 <title>www.ukss.ac.tz</title>
 <style>
-body{font-family:Arial,sans-serif; margin:0; padding:0;background-color:#008080; padding:20px; text-align:center;font-size:25px;}
+body{font-family:Arial,sans-serif; margin:0; padding:0;background-color:#008080; padding:20px; text-align:center;;}
 </style>
 </head>
 <body>
@@ -18,5 +18,6 @@ Welcome at Umoja King'ori Secondary School
 </body>
 
 </html>
+
 
 
