Modify footer styles and content
Updated font size and color in footer.

--- a/footer.html
+++ b/footer.html
@@ -4,13 +4,13 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:0; padding:0;
-background-color:#808080; padding:2px; text-align:center;font-size:20px;}
+background-color:#808080; padding:2px; text-align:center;font-size:16px;font-color:"blue";}
 </style>
 </head>
 <body>
 <div class="footer">
+  <marquee>
 <h5>Contacts Us &copy:ukss</h5>
- <marquee>
 Facebook:<a href="www.facebook.com/ukss">ukss_facebook</a> 
 Twitter:<a href="www.twitter.com/ukss">x</a> 
  Instagram:<a href="www.instagram.com/ukss">ukss_insta story</a> 
@@ -19,4 +19,5 @@ Twitter:<a href="www.twitter.com/ukss">x</a>
 </marquee>
 </body>
 </html>
+
 
