Update department list and add heads of departments

--- a/department.html
+++ b/department.html
@@ -4,14 +4,14 @@
 <title>www.ukss.ac.tz</title>
 </head>
 <body>
-<h3>Departments</h3>
+<h3>Departments and Heads of Departments</h3>
 <ol>
 <li>Department of Language</li>
 <ul>
 <li>...</li>
 <li>...</li>
 </ul>
-<li>Department Social Science</li>
+<li>Department of Social Science</li>
 <ul>
 <li>...</li>
 <li>...</li>
@@ -21,7 +21,7 @@
 <li>...</li>
 <li>...</li>
 </ul>
-<li>Department of Business and Investimate</li>
+  <li>Department of Sports and Games</li>
 <ul>
 <li>...</li>
 <li>...</li>
@@ -31,12 +31,17 @@
 <li>...</li>
 <li>...</li>
 </ul>
-<li>Department of Computer Science and Innovation</li>
+  <li>Department of Mathematics</li>
 <ul>
 <li>...</li>
 <li>...</li>
 </ul>
-<li>Department of Mathematics</li>
+  <li>Department of Business and Investimate</li>
+<ul>
+<li>...</li>
+<li>...</li>
+</ul>
+<li>Department of Computer Science and Innovation</li>
 <ul>
 <li>...</li>
 <li>...</li>
@@ -44,3 +49,4 @@
 </ol>
 </body>
 </html>
+
