Enhance footer marquee with scrolling attributes
Updated marquee attributes for scrolling effect.

--- a/footer.html
+++ b/footer.html
@@ -10,7 +10,8 @@ background-color:#808080; padding:2px; text-align:center;font-size:13px;font-col
 <body>
 <div class="footer">
 <h5>Contacts Us &copy:ukss</h5>
-    <marquee>
+<marquee behavior="scroll" direction="left" loop="infinite"scroll-amount="5" 
+scrolldelay="100"width="400" height="50" bgcolor="#cccccc"hspace="10" vspace="10">
 Facebook:<a href="www.facebook.com/ukss">ukss_facebook</a> 
 Twitter:<a href="www.twitter.com/ukss">x</a> 
  Instagram:<a href="www.instagram.com/ukss">ukss_insta story</a> 
@@ -19,6 +20,7 @@ Twitter:<a href="www.twitter.com/ukss">x</a>
 </marquee>
 </body>
 </html>
+
 
 
 
