--- a/middle.html
+++ b/middle.html
@@ -4,7 +4,75 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:5px;
-padding:20px; text-align:center;background-color:#FFFFFF;font-size:18px;}
+padding:20px; text-align:center;background-color:#FFFFFF;color:#000000;font-size:19px;}
+body{
+animation:slideshow 180s infinite;
+}
+@keyframes slideshow{
+0%{
+background-image:url('image1.jpg');
+}
+5%{
+background-image:url('image2.jpg');
+}
+10%{
+background-image:url('image3.jpg');
+}
+15%{
+background-image:url('image4.jpg');
+}
+20%{
+background-image:url('image5.jpg');
+}
+25%{
+background-image:url('image6.jpg');
+}
+30%{
+background-image:url('image7.jpg');
+}
+35%{
+background-image:url('image8.jpg');
+}
+40%{
+background-image:url('image9.jpg');
+}
+45%{
+background-image:url('image10.jpg');
+}
+50%{
+background-image:url('image11.jpg');
+}
+55%{
+background-image:url('image12.jpg');
+}
+60%{
+background-image:url('image13.jpg');
+}
+65%{
+background-image:url('image14.jpg');
+}
+70%{
+background-image:url('image15.jpg');
+}
+75%{
+background-image:url('image16.jpg');
+}
+80%{
+background-image:url('image17.jpg');
+}
+85%{
+background-image:url('image18.jpg');
+}
+90%{
+background-image:url('image19.jpg');
+}
+95%{
+background-image:url('image20.jpg');
+}
+100%{
+background-image:url('image21.jpg');
+}
+}
 </style>
 </head>
 <body>
@@ -19,6 +87,7 @@ padding:20px; text-align:center;background-color:#FFFFFF;font-size:18px;}
 </body>
 
 </html>
+
 
 
 
