--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@ body{font-family:Arial,sans-serif; margin:0; padding:0;background-color:#008080;
 <div class="header">
 <h1>
 Welcome at Umoja King'ori Secondary School
-<img src="logo.jpg" align="left" width="100px" height="120px" national logo >
+<img src="uhuru na umoja.png" align="left" width="100px" height="120px" national logo >
 <img src="logo.jpg" align="right" width="100px" height="120px" school logo>
 </h1>
 <h3>Our Motto: Education for Execellency, Dicipline and Unity </h3>
@@ -18,6 +18,7 @@ Welcome at Umoja King'ori Secondary School
 </body>
 
 </html>
+
 
 
 
