Modify links and add school gallery in middle.html
Updated the links in the middle.html file and added a new link to the school gallery.

--- a/middle.html
+++ b/middle.html
@@ -82,11 +82,12 @@ background-image:url('image21.jpg');
 <a href="school-administration.html"><h4>School Administration</h4></a>
 <a href="student-details.html"><h4>Students' Details</h4></a>
 <a href="school-events.html"><h4>New Events</h4></a>
-<a href="photos.html"><h4>School Photos</h4></a>
+<a href="gallery.html"><h4>School Gallery</h4></a>
 </div>
 </body>
 
 </html>
+
 
 
 
