Refactor middle.html with updated links and styles
Updated links and added strong tags for emphasis.

--- a/middle.html
+++ b/middle.html
@@ -81,12 +81,13 @@ background-image:url('image21.jpg');
 <a href="biography.html"target="_blank"><h4>School Biography</h4></a>
 <a href="school-administration.html"><h4>School Administration</h4></a>
 <a href="student-details.html"><h4>Students' Details</h4></a>
-<a href="school-events.html"><h4>New Events</h4></a>
-<a href="gallery.html"target="_blank"><h4>School Gallery</h4></a>
+<a href="school-events.html"><h4><strong>New Events</strong>strong</h4></a>
+<a href="gallery.html" target="_blank"><h4><strong>Vist School Gallery</strong></h4></a>
 </div>
 </body>
 
 </html>
+
 
 
 
