--- a/middle.html
+++ b/middle.html
@@ -3,8 +3,9 @@
 <head>
 <title>www.ukss.ac.tz</title>
 <style>
-body{font-family:Arial,sans-serif; margin:5px;
-padding:20px; text-align:center;background-color:#FFFFFF;color:#000000;font-size:19px;}
+  body{font-family:Arial,sans-serif; object-fit:cover;background-repeat:no-repeat;
+background-position:center;
+padding:20px; text-align:center;color:#ffff00; font-size:16px;}
 body{
 animation:slideshow 180s infinite;
 }
@@ -12,67 +13,29 @@ animation:slideshow 180s infinite;
 0%{
 background-image:url('image1.jpg');
 }
-5%{
+15%{
 background-image:url('image2.jpg');
 }
-10%{
+30%{
 background-image:url('image3.jpg');
 }
-15%{
+45%{
 background-image:url('image4.jpg');
 }
-20%{
+60%{
 background-image:url('image5.jpg');
 }
-25%{
+75%{
 background-image:url('image6.jpg');
 }
-30%{
+90%{
 background-image:url('image7.jpg');
 }
-35%{
-background-image:url('image8.jpg');
-}
-40%{
-background-image:url('image9.jpg');
-}
-45%{
-background-image:url('image10.jpg');
-}
-50%{
-background-image:url('image11.jpg');
-}
-55%{
-background-image:url('image12.jpg');
-}
-60%{
-background-image:url('image13.jpg');
-}
-65%{
-background-image:url('image14.jpg');
-}
-70%{
-background-image:url('image15.jpg');
-}
-75%{
-background-image:url('image16.jpg');
-}
-80%{
-background-image:url('image17.jpg');
-}
-85%{
-background-image:url('image18.jpg');
-}
-90%{
-background-image:url('image19.jpg');
-}
-95%{
-background-image:url('image20.jpg');
-}
 100%{
-background-image:url('image21.jpg');
+background-image:url('image.jpg');
 }
 }
+
 </style>
 </head>
 <body>
@@ -81,12 +44,13 @@ background-image:url('image21.jpg');
 <a href="biography.html"target="_blank"><h4>School Biography</h4></a>
 <a href="school-administration.html"><h4>School Administration</h4></a>
 <a href="student-details.html"><h4>Students' Details</h4></a>
-<a href="school-events.html"><h4><strong>New Events</strong></h4></a>
-<a href="gallery.html" target="_blank"><h4><strong>Vist School Gallery</strong></h4></a>
+<a href="school-events.html"><h4>New Events</h4></a>
+<a href="gallery.html" target="_blank"><h4>Vist Our School Gallery</h4></a>
 </div>
 </body>
 
 </html>
+
 
 
 
