--- a/gallery.html
+++ b/gallery.html
@@ -5,73 +5,113 @@
 <style>
 body{Font-family:Helvetica, sans-serif;color:#ffffff;object-fit:cover;}
 body{
-animation:slideshow 180s infinite;
+animation:slideshow 300s infinite;
 }
 @keyframes slideshow{
 0%{
+background-image:url('image.jpg');
+}
+  3%{
 background-image:url('image1.jpg');
 }
-5%{
+  6%{
 background-image:url('image2.jpg');
 }
-10%{
+9%{
 background-image:url('image3.jpg');
 }
-15%{
+12%{
 background-image:url('image4.jpg');
 }
-20%{
+15%{
 background-image:url('image5.jpg');
 }
-25%{
+18%{
 background-image:url('image6.jpg');
 }
-30%{
+21%{
 background-image:url('image7.jpg');
 }
-35%{
+24%{
 background-image:url('image8.jpg');
 }
-40%{
+27%{
 background-image:url('image9.jpg');
 }
-45%{
+30%{
 background-image:url('image10.jpg');
 }
-50%{
+33%{
 background-image:url('image11.jpg');
 }
-55%{
+36%{
 background-image:url('image12.jpg');
 }
-60%{
+39%{
 background-image:url('image13.jpg');
 }
-65%{
+42%{
 background-image:url('image14.jpg');
 }
-70%{
+45%{
 background-image:url('image15.jpg');
 }
-75%{
+48%{
 background-image:url('image16.jpg');
 }
-80%{
+51%{
 background-image:url('image17.jpg');
 }
-85%{
+54%{
 background-image:url('image18.jpg');
 }
-90%{
+57%{
 background-image:url('image19.jpg');
 }
-95%{
+60%{
 background-image:url('image20.jpg');
 }
-100%{
+63%{
 background-image:url('image21.jpg');
 }
-
+  66%{
+background-image:url('image22.jpg');
+}
+  69%{
+background-image:url('image23.jpg');
+}
+  72%{
+background-image:url('image24.jpg');
+}
+  75%{
+background-image:url('image25.jpg');
+}
+  78%{
+background-image:url('image26.jpg');
+}
+  81%{
+background-image:url('image27.jpg');
+}
+  84%{
+background-image:url('image28.jpg');
+}
+    87%{
+background-image:url('image28.jpg');
+}
+    90%{
+background-image:url('image28.jpg');
+}
+    93%{
+background-image:url('image28.jpg');
+}
+    96%{
+background-image:url('image28.jpg');
+}
+    99%{
+background-image:url('image28.jpg');
+}
+    100%{
+background-image:url('image28.jpg');
 }
 </style>
 </head>
@@ -79,4 +119,5 @@ background-image:url('image21.jpg');
 <marquee direction="right" bgcolor="#0080000";height="1rem";scrolldelay="100">Enjoy Your Online Tour</marquee>
 <marquee direction="left" crolldelay="80">Keep Visting Our Online Gallery</marquee>
 </body>
+
 </html>
