--- a/left.html
+++ b/left.html
@@ -4,22 +4,23 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:5px;
-padding:20px; text-align:center;background-color:#c0c0c0;font-size:18px;}
+padding:20px; text-align:center;background-color:#c0c0c0;font-size:17px;}
 </style>
 </head>
 <body>
 <div class="left">
-<h2>Administration Site</h2>
+<h3>Administration Site</h3>
 <a href="department.html" target="_blank"><h4>Departments</h4></a>
 <a href="subjects.html"><h4>Registered Subjects</h4></a>
-<a href="academic.html"><h4>Academic Issues</h4></a>
-<a href="results.html"><h4>Matokeo Ya Mwanafunzi</h4></a>
+<a href="academic.html"target="_blank"><><h4>Academic Issues</h4></a>
+<a href="results.html" target="_blank"><><h4>Matokeo Ya Mwanafunzi</h4></a>
 <a href="parent-comment.html" target="_blank"><h4>Maoni Ya Mzazi</h4></a>
 
 </div>
 </body>
 
 </html>
+
 
 
 
