--- a/middle.html
+++ b/middle.html
@@ -41,15 +41,16 @@ background-image:url('image.jpg');
 <body>
 <div class="middlle">
 <h3>School Background</h3>
-<a href="biography.html"target="_blank"><h4>School Biography</h4></a>
-<a href="school-administration.html"><h4>School Administration</h4></a>
-<a href="student-details.html"><h4>Students' Details</h4></a>
-<a href="school-events.html"><h4>New Events</h4></a>
+<a href="biography.html"target="_blank" target="_blank"><h4>School Biography</h4></a>
+<a href="school-administration.html" target="_blank"><h4>School Administration</h4></a>
+<a href="student-details.html" target="_blank"><h4>Students' Details</h4></a>
+<a href="school-events.html" target="_blank"><h4>New Events</h4></a>
 <a href="gallery.html" target="_blank"><h4>Vist Our School Gallery</h4></a>
 </div>
 </body>
 
 </html>
+
 
 
 
