--- a/school-events.html
+++ b/school-events.html
@@ -6,18 +6,18 @@
 <body>
 <h4> Matukio ya Disemba </h4>
 <ul>
-<li><p>Shule Imefungwa leo tarehe <strong>05/12/2025</strong> 
-na itafnguliwa rasmi tarehe <strong>13/01/2026.</strong></p>
-<p>Hivyo, wanafunzi wote wanaombwa kufika bila kukosa na masomo
- yataanza mara moja pindi shule itakapo funguliwa.</p>
+<li>
+ <p> Shule Imefungwa leo tarehe <strong>05/12/2025</strong> na itafnguliwa rasmi tarehe <strong>13/01/2026.</strong> </p>
 </li>
-<li>Aidha, Shule inapenda kuwatakia  likizo njema
-na kheri ya Krismasi na Mwaka Mpya.</li>
  <li>
   <p>Wanafunzi waliochaguliwa kujiunga kidato cha kwanza shuleni, mnatakiwa kushona sare za shule kama mlivyoelekezwa kwenye fomu ya kujiunga.</p> 
   <p>Kwa msaada zaidi, unaweza kufika shuleni au kuwasiliana na wahusika kupitia namba za simu zilizo kwenye fomu.</p> 
  </li>
+ <li>
+  <p> Hivyo, wanafunzi wote wanaombwa kufika bila kukosa na masomo yataanza mara moja pindi shule itakapo funguliwa.</p>
+  <p> Aidha, Uongozi wa Shule unapenda kuwatakia  likizo njema na kheri ya Krismasi na Mwaka Mpya.</p>
+ </li>
 </ul>
 </body>
-
 </html>
+
