--- a/biography.html
+++ b/biography.html
@@ -5,25 +5,24 @@
 </head>
 <body>
 <p>
-Umoja King'ori Secondary School is the government day school established in 2018, 
-found at King'ori Ward,in Meru district, Arusha.
+ Shule ya Sekondari Umoja King'ori ni shule ya kutwa ya serikali iliyoanzishwa mwaka 2018, chini ya uongozi mahiri wa 
+ <strong>Mwl. Fred Paul Lubida</strong akihudumu kama Mkuu wa Shule.
 </p> 
-It is about 25Kms from Kibaoni station, Main Arusha-Moshi Road to the school.
-</p> 
-<p>
-Currently, the school have 15 active workers, 
-having 15 teachers and 2 non-teaching staff.
-under the <strong>strong leadership of Mr. Fred Paul Lubida</strong>.
-</p>
-<p>
-Umoja King'ori Secondary School is a growing school 
-with enough infrastructure to enroll 
-all primary leaving pupils from nearby
- primary schools around the school.
- Having enrolled 78 students in 2026 only,
- making ... total students in the school, 
- including ... girls and ... boys.
-</p>
-<p><img="leadership-image.png" width="700px"height="500px"></p>
+ <p>
+   Shule ya Sekondari Umoja King'ori inamiundo mbinu ya kutosha kupokea wanafunzi wanaojiunga na kidato cha kwanza kutoka shule za msingi mbalimbali.
+ </p
+  <p>
+   Aidha, Shule inapokea wanafunzi wanaohamia kwa kidato cha kwanza na cha tatu.
+  </p>
+ <p>
+  Uongozi wa shule umefanikiwa kuwa unaweka ambi kadhaa shuleni kwa ajili ya kujisomea kwa kidato cha pili na cha nne, 
+  jambo lililosaidia kuondoa ufaulu wa divisheni ziro toka shule kuanzisha.  
+ </p>
+ <p>
+  Shule iko umbali wa km 25 toka barabara kuu ya Arusha-Moshi. Hivyo, kwa wasio na usafiri binafsi, <br>
+  panda bus au daladala kutoka Arusha au Moshi na uteremkie Kibaoni ambapo utachukua usafiri wa pikipiki aliarufu bodaboda za kuelekea King'ori, <br>
+  utapita King[ori madukani na uje Nkoansio. Shule yetu ipo jirani kabisa na Shule ya Msingi Nkoansio.<br>
+  Hivyo, wageni na wenyetu wote mnakaribishwa!
+ </p> 
 </body>
 </html>
