--- a/biography.html
+++ b/biography.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>www.ukss.ac.tz</title>
+ body{
+ text-alight:center;
+ }
 </head>
 <body>
 <p>
@@ -26,3 +29,4 @@
  </p> 
 </body>
 </html>
+
