--- a/biography.html
+++ b/biography.html
@@ -2,8 +2,9 @@
 <html>
 <head>
 <title>www.ukss.ac.tz</title>
+ <style>
  body{
- text-alight:center;
+  font-weight:normal; font-size:1.3rem; text-alight:center; font-family:Aerial,sans-serif;
  }
 </head>
 <body>
@@ -29,4 +30,5 @@
  </p> 
 </body>
 </html>
+
 
