--- a/biography.html
+++ b/biography.html
@@ -6,6 +6,7 @@
  body{
   font-weight:normal; font-size:1.3rem; text-alight:center; font-family:Aerial,sans-serif;
  }
+  </style>
 </head>
 <body>
 <p>
@@ -30,5 +31,6 @@
  </p> 
 </body>
 </html>
+
 
 
