--- a/school-events.html
+++ b/school-events.html
@@ -2,6 +2,11 @@
 <html>
 <head>
 <title>www.ukss.ac.tz</title>
+ <style>
+ body{
+  font-weight:normal; font-size:1.3rem; text-alight:left; font-family:Aerial,sans-serif;
+ }
+  </style>
 </head>
 <body>
 <h4> Matukio ya Disemba </h4>
@@ -20,4 +25,5 @@
 </ul>
 </body>
 </html>
+
 
