--- a/school-events.html
+++ b/school-events.html
@@ -4,7 +4,7 @@
 <title>www.ukss.ac.tz</title>
  <style>
  body{
-  font-weight:normal; font-size:1.3rem; text-alight:left; font-family:Aerial,sans-serif;
+  font-weight:normal; font-size:2.8rem; text-alight:center; font-family:Aerial,sans-serif;
  }
   </style>
 </head>
@@ -25,5 +25,6 @@
 </ul>
 </body>
 </html>
+
 
 
