--- a/biography.html
+++ b/biography.html
@@ -10,27 +10,28 @@
 </head>
 <body>
 <p>
- Shule ya Sekondari Umoja King'ori ni shule ya kutwa ya serikali iliyoanzishwa mwaka 2018, chini ya uongozi mahiri wa 
+ Shule ya Sekondari Umoja King'ori ni shule ya kutwa inayomilikiwa na serikali. Shule hii iliyoanzishwa mwaka 2018, chini ya uongozi mahiri wa 
  <strong>Mwl. Fred Paul Lubida</strong akihudumu kama Mkuu wa Shule.
 </p> 
  <p>
-   Shule ya Sekondari Umoja King'ori inamiundo mbinu ya kutosha kupokea wanafunzi wanaojiunga na kidato cha kwanza kutoka shule za msingi mbalimbali.
+   Shule ya Sekondari Umoja King'ori inayo miundombinu ya kutosha kupokea wanafunzi wanaojiunga na kidato cha kwanza kutoka shule za msingi mbalimbali.
  </p
   <p>
    Aidha, Shule inapokea wanafunzi wanaohamia kwa kidato cha kwanza na cha tatu.
   </p>
  <p>
-  Uongozi wa shule umefanikiwa kuwa unaweka ambi kadhaa shuleni kwa ajili ya kujisomea kwa kidato cha pili na cha nne, 
-  jambo lililosaidia kuondoa ufaulu wa divisheni ziro toka shule kuanzisha.  
+  Uongozi wa shule umefanikiwa kuwa unaweka kambi kadhaa shuleni kwa ajili ya kujisomea kwa kidato cha pili na cha nne, 
+  jambo lililosaidia kuondoa ufaulu wa divisheni ziro toka shule kuanzishwa.  
  </p>
  <p>
-  Shule iko umbali wa km 25 toka barabara kuu ya Arusha-Moshi. Hivyo, kwa wasio na usafiri binafsi, <br>
-  panda bus au daladala kutoka Arusha au Moshi na uteremkie Kibaoni ambapo utachukua usafiri wa pikipiki aliarufu bodaboda za kuelekea King'ori, <br>
-  utapita King[ori madukani na uje Nkoansio. Shule yetu ipo jirani kabisa na Shule ya Msingi Nkoansio.<br>
+  Shule iko umbali wa takribani km 26.4 toka barabara kuu ya Arusha-Moshi. Hivyo, kwa wasio na usafiri binafsi, <br>
+  panda bus au daladala kutoka Arusha au Moshi na uteremkie Kibaoni ambapo utachukua usafiri wa pikipiki maarufu kama bodaboda za kuelekea King'ori, <br>
+  utapita King'ori Madukani na uje Nkoansio. Shule yetu ipo jirani kabisa na Shule ya Msingi Nkoansio.<br>
   Hivyo, wageni na wenyetu wote mnakaribishwa!
  </p> 
 </body>
 </html>
+
 
 
 
