--- a/headmasterpage.html
+++ b/headmasterpage.html
@@ -20,11 +20,10 @@ text-align:center;
 <body>
 <h3>Karibu Kwenye Tovuti Rasimi Ya Shule</h4>
 <h4>Eneo Maalumu Kwa Ajili Ya Shughuli Za Kitaaluma</h4>
-<h5>confidential</h5>
 <ul>
-<li><a href="academiclogin.html">School Academic Masters</a></li>
+<li><a href="view-student-results.html">View Student Academic Results</a></li>
 <br><br>
-<li><a href="headmasterlogin.html" target="_blank">School Head Master</a></</li>
+<li><a href="view-parent-comments.html" target="_blank">Viev Parents Comments</a></</li>
 </ul>
 </body>
 </html>
