--- a/headmasterpage.html
+++ b/headmasterpage.html
@@ -18,14 +18,15 @@ text-align:center;
 </style>
 </head>
 <body>
-<h3>Karibu Kwenye Tovuti Rasimi Ya Shule</h4>
-<h4>Eneo Maalumu Kwa Ajili Ya Shughuli Za Kitaaluma</h4>
+<h3>Welcome To The School Website</h4>
+<h4>Special Page For Administrative Issues</h4>
 <ul>
 <li><a href="view-student-results.html">View Student Academic Results</a></li>
 <br><br>
-<li><a href="view-parent-comments.html" target="_blank">Viev Parents Comments</a></</li>
+<li><a href="view-parent-comments.html" target="_blank">View Parents Comments</a></</li>
 </ul>
 </body>
 </html>
 </body>
+
 </html>
