--- a/academic.html
+++ b/academic.html
@@ -23,10 +23,11 @@ text-align:center;
 <ul>
 <li><a href="academiclogin.html">School Academic Masters</a></li>
 <br><br>
-<li><a href="headmasterlogin.html" target="_blank">School Head Master</a></</li>
+<li><a href="headmasterlogin.html">School Head Master</a></</li>
 </ul>
 </body>
 </html>
 </body>
 
 </html>
+
