--- a/header.html
+++ b/header.html
@@ -13,11 +13,12 @@ Welcome at Umoja King'ori Secondary School
 <img src="uhuru na umoja.png" align="left" width="150px" height="120px" national logo >
 <img src="logo.png" align="right" width="150px" height="120px" school logo>
 </h1>
-<h3>Our Motto: Education for Execellency, Dicipline and Unity </h3>
+<h3>"Our Motto: Execellence in Education, Unity and Discipline"</h3>
 </div>
 </body>
 
 </html>
+
 
 
 
