--- a/student-results.html
+++ b/student-results.html
@@ -31,7 +31,9 @@ cursor:pointer;
 </head>
 <body>
 <form id="student-results.html" align="center">
-<h3>Mzazi Wa:</h3>
+<h3>Tazama Matokeo Ya Mtotot Wako Hapa</h3>
+	<h3>Jaza Majina Yake Kwa Usahihi</h3>
+	<h4>Mzazi Wa:</h4>
 <input type="text" id="fname" name="fname" 
 placeholder="Jina la kwanza la Mwanafunzi" required><br>
 <input type="text" id="mname" name="mname"
@@ -81,5 +83,6 @@ placeholder="Jina la kwanza la Mwanafunzi" required><br>
 		 
 
 		 
+
 
 		 
