--- a/enter-student-marks.html
+++ b/enter-student-marks.html
@@ -20,14 +20,14 @@ align:center;
 <option>Kidato II</option>
 </select>
 <button type="submit" target="_blank">Procceed</button>
- <p>Hapa wataaluma mtakuwa na uswename na password zenu za 
- kuingilia ili muweze kuweka matokeo kwenye mfumo</p>
+
  <p>Sehemu hii bado ipo kwenye maboresho</p>
- <p>Endelea kutumia hiyo username na password 
- ili kuangalia mabadiliko kwenye kipengele hiki muhimu zaidi</p>
+ <p>Endelea kutembelea website yetu kila unapopata muda</p>
+ <p>ili kuona mabadiliko kwenye kipengele hiki muhimu zaidi</p>
  <p>Username yako ni: <b>Admin2</b></p>
   <p>Password yako ni: <b>admin2</b></p>
    <p>Zitatumika kwa kipindi chote cha maboresho</p>
     <p>Asante kwa ushirikiano wako</p>
 </body>
+
 </html>
