--- a/students-comments.html
+++ b/students-comments.html
@@ -1,9 +1,40 @@
+
 <!DOCTYPE html>
-<html>
+<html align="center">
 <head>
-<title>www.ukss.ac.tz</title>
+<title>www.ukss.ac.tz</title>	
 </head>
+
 <body>
-wanafunzi watakuwa na uwezo wa kutoa maoni yao. ambayo yatasikilizwa na viongozi wao.
+<h3>Toa Maoni Yako Tuijenge Shule Yetu Pamoja</h3>
+<h4>Mimi</h4>
+<form method="parent-comment.php" action="post">
+<table border="0" cellpadding="10"cellspacing="10"align="center" width="100px" height="20%">
+<tr>
+	<td><input type="textbox" placeholder="Jina la kwanza la mwanafunzi" required></td>
+</tr>
+<tr>
+	<td><input type="textbox" placeholder="Jina la pili la mwanafunzi" required></td>
+</tr>
+<tr>
+	<td><input type="textbox" placeholder="Jina la tatu la mwanafunzi"required></td>
+</tr>
+<tr>
+	<td><input type="textbox" placeholder="Taja kidato unachosoma"></td>
+</tr>
+<tr>
+	<td><input type="textbox" placeholder="Mwaka uliomaliza form IV"></td>
+</tr>
+<tr>
+<td align="center">
+<textarea>
+</textarea>
+	</td></tr><tr>
+	<td align="center">
+	<input type="submit" value="Tuma Maoni">
+	</td>
+	</tr>
+	</table>
+</form>
 </body>
 </html>
