--- a/academiclogin.html
+++ b/academiclogin.html
@@ -62,7 +62,7 @@ cursor:pointer;
      // redirect instead of alert
      window.location.href = 'enter-student-marks.html';
    } else {
-     alert('Please Contact Your School Academic Masters');
+     alert('Only For Official School Academic Masters');
    }
  });
 </script>
@@ -72,5 +72,6 @@ cursor:pointer;
 		 
 
 		 
+
 
 		 
