--- a/student-results.html
+++ b/student-results.html
@@ -4,7 +4,7 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{
-font-family:Aerial, sans-serif; text-transform:uppercase;
+font-family:Aerial, sans-serif; 
 }
 label{
 display:block;
@@ -31,7 +31,7 @@ cursor:pointer;
 </head>
 <body>
 <form id="student-results.html" align="center">
-<h3>Tazama Matokeo Ya Mtotot Wako Hapa</h3>
+<h3>Tazama Matokeo Ya Mtoto Wako Hapa</h3>
 	<h3>Jaza Majina Yake Kwa Usahihi</h3>
 	<h4>Mzazi Wa:</h4>
 <input type="text" id="fname" name="fname" 
@@ -86,3 +86,4 @@ placeholder="Jina la kwanza la Mwanafunzi" required><br>
 
 
 		 
+
