--- a/left.html
+++ b/left.html
@@ -10,7 +10,7 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:17px;}
 <body>
 <div class="left">
 <h3>Administration Site</h3>
-<a href="department.html" target="_blank"><h4>Departments</h4></a>
+<a href="department.html"><h4>Departments</h4></a>
 <a href="subjects.html"><h4>Registered Subjects</h4></a>
 <a href="academic.html" target="_blank"><h4>Academic Issues</h4></a>
 <a href="student-results.html" target="_blank"><h4>Matokeo Ya Mwanafunzi</h4></a>
@@ -20,6 +20,7 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:17px;}
 </body>
 
 </html>
+
 
 
 
