--- a/students-comments.html
+++ b/students-comments.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-<h3>Toa Maoni Yako Tuijenge Shule Yetu Pamoja</h3>
+<h3>Toa Maoni Yako Tuijenge Umoja Pamoja</h3>
 <h4>Mimi</h4>
 <form method="parent-comment.php" action="post">
 <table border="0" cellpadding="10"cellspacing="10"align="center" width="100px" height="20%">
@@ -38,3 +38,4 @@
 </form>
 </body>
 </html>
+
