--- a/academiclogin.html
+++ b/academiclogin.html
@@ -62,7 +62,7 @@ cursor:pointer;
      // redirect instead of alert
      window.location.href = 'enter-student-marks.html';
    } else {
-     alert('Only For Official School Academic Masters');
+     alert('Only For School Academic Masters');
    }
  });
 </script>
@@ -75,3 +75,4 @@ cursor:pointer;
 
 
 		 
+
