--- a/students-admins.html
+++ b/students-admins.html
@@ -63,7 +63,7 @@ cursor:pointer;
      // redirect instead of alert
      window.location.href = 'view-student-comments.html';
    } else {
-     alert('Sorry! Please Contact School Head Boy or School Head Girl');
+     alert('May You Please Contact School Head Prefects i.e HB, HG or GS ?');
    }
  });
 </script>
@@ -73,5 +73,6 @@ cursor:pointer;
 		 
 
 		 
+
 
 		 
