--- a/academic.html
+++ b/academic.html
@@ -21,11 +21,12 @@ text-align:center;
 <h3>Karibu Kwenye Tovuti Rasimi Ya Shule</h4>
 <h4>Eneo Maalumu Kwa Ajili Ya Shughuli Za Kitaaluma</h4>
 <ul>
-<li><a href="academiclogin.html">School Academic Masters</a></li>
+<li><a href="academiclogin.html" target="_blank">School Academic Masters</a></li>
 <br><br>
-<li><a href="headmasterlogin.html">School Head Master</a></</li>
+<li><a href="headmasterlogin.html" target="_blank">School Head Master</a></</li>
 </ul>
 </body>
 </html>
+
 
 
