--- a/right.html
+++ b/right.html
@@ -10,15 +10,16 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:17px;}
 <body>
 <div class="right">
 <h3>Students Site</h3>
-<a href="student-leadership.html""target="_blank"><h4>Students' Leadership</h4></a>
-<a href="https://kplus712.github.io/UKSS-/"target="_blank"><h4>Students' Election</h4></a>
-<a href="students-admins.html""target="_blank"><h4>Students Admins</h4></a>
+<a href="student-leadership.html" target="_blank"><h4>Students' Leadership</h4></a>
+<a href="https://kplus712.github.io/UKSS-/" target="_blank"><h4>Students' Election</h4></a>
+<a href="students-admins.html" target="_blank"><h4>Students Admins</h4></a>
 <h5>For Registered and Former Students</h5>
-<a href="students-comments.html""target="_blank"><h4>Student Comment</h4></a>
+<a href="students-comments.html" target="_blank"><h4>Student Comment</h4></a>
 </div>
 </body>
 
 </html>
+
 
 
 
