--- a/header.html
+++ b/header.html
@@ -10,14 +10,15 @@ body{font-family:Arial,sans-serif; margin:0; padding:0;background-color:#008080;
 <div class="header">
 <h1>
 Welcome at Umoja King'ori Secondary School
-<img src="uhuru na umoja.png" align="left" width="6.25rem" height="7.5rem">
-<img src="logo.png" align="right" width="6.25rem" height="7.5rem">
+<img src="uhuru na umoja.png" align="left" width="100px" height="120px">
+<img src="logo.png" align="right" width="100px" height="120px">
 </h1>
 <h3>"Our Motto: Execellence in Education, Unity and Discipline"</h3>
 </div>
 </body>
 
 </html>
+
 
 
 
