--- a/left.html
+++ b/left.html
@@ -9,7 +9,7 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:17px;}
 </head>
 <body>
 <div class="left">
-<h3>Administration Site</h3>
+<h3>Administrative Site</h3>
 <a href="department.html"><h4>Departments</h4></a>
 <a href="subjects.html"><h4>Registered Subjects</h4></a>
 <a href="academic.html"><h4>Academic Issues</h4></a>
@@ -18,8 +18,9 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:17px;}
 
 </div>
 </body>
-
 </html>
+
+
 
 
 
