--- a/view-parent-comments.html
+++ b/view-parent-comments.html
@@ -1,15 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="sw">
 <head>
-<title>www.ukss.ac.tz</title>
+  <meta charset="UTF-8">
+  <title>Maoni ya Wazazi</title>
 </head>
-<p>
-Kipande Hiki ni cha Mkuu wa Shule kusoma comments za wazazi 
-</p>
-<p>
-Asanteni sana: 
-</p>
-<p>
-<marquee direction="right">Maoni Yanakaribishwa</marquee> 
-</p>
 <body>
+  <h2>Orodha ya Maoni ya Wazazi</h2>
+  <h3>Mzazi wa:</h3>
+  <ul id="comments-list"></ul>
+  <script>
+   
+    document.addEventListener('DOMContentLoaded', function() {
+      // Pata data kutoka localStorage
+      const comments = JSON.parse(localStorage.getItem('comments')) || [];
+      const commentsList = document.getElementById('comments-list');  
+
+      // Onyesha kila comment kwenye ukurasa
+      comments.forEach((comment, index) => {
+        const commentElement = document.createElement('li');
+        commentElement.innerHTML = `
+          <h3>${index + 1}. ${comment.fname} ${comment.mname} ${comment.lname}</h3>
+          <p>Kidato: ${comment.kidato}</p>
+          <p>Maoni: ${comment.maoni}</p>
+          <hr>
+        `;
+        commentsList.appendChild(commentElement);
+      });
+    });
+  </script>
+</body>
+</html>
+
+
