--- a/students-admins.html
+++ b/students-admins.html
@@ -61,9 +61,9 @@ cursor:pointer;
 
    if (user) {
      // redirect instead of alert
-     window.location.href = 'view-student-comments.html';
+     window.location.href = 'headprefectspage.html';
    } else {
-     alert('May You Please Contact School Head Prefects i.e HB, HG or GS ?');
+     alert('Sorry! Please Contact School Head Boy or School Head Girl');
    }
  });
 </script>
@@ -73,6 +73,5 @@ cursor:pointer;
 		 
 
 		 
-
 
 		 
