--- a/headprefectspage.html
+++ b/headprefectspage.html
@@ -25,9 +25,10 @@ text-align:center;
 <br><br>
 <li><a href="schoolsongs.html">Watch and Listen School Songs</a></li>
 <br><br>
-<li><a href="view-student-comments.html" target="_blank">View Students Comments</a></</li>
+<li><a href="view-student-comments.html">View Students Comments</a></</li>
 </ul>
 </body>
 </html>
 </body>
+
 </html>
