--- a/graduationalsongs.html
+++ b/graduationalsongs.html
@@ -22,7 +22,7 @@ text-align:center;
 <p>School song: Nyimbo Ya Shule</p>
 <p>
 <audio controls>
-<source src="schoolsong.mp3" type="audio/mpeg">
+<source src="Schoolsong.mp3" type="audio/mpeg">
 Your browser does not support the audio
 </audio>
 </p><br><br>
@@ -49,4 +49,5 @@ Your browser does not support the audio
 </audio>
 </p>
 </body>
+
 </html>
