--- a/parent-comment.html
+++ b/parent-comment.html
@@ -52,7 +52,7 @@ cursor:pointer;
 <br><br>
 <textarea id="maoni" name="maoni" placeholder="Andika maoni yako hapa" required></textarea>
 <br><br>
-<button type="submit">Login</button>
+<button type="submit">Tuma</button>
 </form>
 
  <script>
@@ -82,4 +82,5 @@ cursor:pointer;
   });
 </script>
 </body>
+
 </html>
