--- a/parent-comment.html
+++ b/parent-comment.html
@@ -52,7 +52,7 @@ cursor:pointer;
 <br><br>
 <textarea id="maoni" name="maoni" placeholder="Andika maoni yako hapa" required></textarea>
 <br><br>
-<button type="submit">Tuma</button>
+<button type="submit">Tuma Maoni</button>
 </form>
 
  <script>
@@ -84,3 +84,4 @@ cursor:pointer;
 </body>
 
 </html>
+
