--- a/headprefectspage.html
+++ b/headprefectspage.html
@@ -3,32 +3,34 @@
 <head>
 <title>www.ukss.ac.tz</title>
 <style>
+h2{
+text-align:center;
+}
 h3{
 text-align:center;
 }
 h4{
 text-align:center;
 }
-h5{
-text-align:center;
-}
-ul{
-text-align:center;
-}
 </style>
 </head>
 <body>
-<h3>Karibu Kwenye Tovuti Rasimi Ya Shule</h4>
-<h4>Eneo Maalumu Kwa Ajili Ya Shughuli Za Wanafunzi</h4>
-<ul>
-<li><a href="studentregulations.html">Read Student Rules and Regulations</a></li>
+<h2>Karibu Kwenye Tovuti Rasimi Ya Shule</h2>
+<h3>Eneo Maalumu Kwa Ajili Ya Shughuli Za Uongozi Wa Wanafunzi</h3>
 <br><br>
-<li><a href="schoolsongs.html">Watch and Listen School Songs</a></li>
-<br><br>
-<li><a href="view-student-comments.html">View Students Comments</a></</li>
-</ul>
+<h4>
+<a href="studentregulations.html">Soma Kanuni na Taratibu za Shule <br> (Read Students' Rules and Regulations)</a>
+<br><br><br><br>
+
+<a href="school-leadership.html">Tazama Muuondo wa Uongozi wa Wanafunzi <br> (View Students' Leadership)</a>
+<br><br><br><br>
+
+<a href="Current-leadership.html">Wafahamu Viongozi wa sasa <br> (View Current Students' Leaders)</a>
+<br><br><br><br>
+
+<a href="students-admins.html" target="_blank">Tazama Maoni ya Wanafunzi <br> (View Students' Comments)</a>
+</h4>
 </body>
 </html>
 </body>
-
 </html>
