--- a/right.html
+++ b/right.html
@@ -4,28 +4,21 @@
 <title>www.ukss.ac.tz</title>
 <style>
 body{font-family:Arial,sans-serif; margin:5px;
-padding:20px; text-align:center;background-color:#c0c0c0;font-size:17px;}
+padding:20px; text-align:center;background-color:#c0c0c0;font-size:18px;}
 </style>
 </head>
 <body>
 <div class="right">
-<h3>Students Site</h3>
-<a href="student-leadership.html" target="_blank"><h4>Students' Leadership</h4></a>
-<a href="https://kplus712.github.io/UKSS-/" target="_blank"><h4>Students' Election</h4></a>
-<a href="students-admins.html" target="_blank"><h4>Students Admins</h4></a>
-<h5>For Registered and Former Students</h5>
-<a href="students-comments.html" target="_blank"><h4>Student Comment</h4></a>
+<h3>Only for Registered Students</h3>
+<h4>
+<a href="headprefectspage.html" target="_blank"><h4>Students' Leadership</a>
+<br>
+<a href="https://kplus712.github.io/UKSS-/" target="_blank"><h4>Students' Election</a>
+<br>
+<a href="schoolsongs.html"><h4>Students' Ceremonies</a>
+<br>
+<a href="students-comments.html"target="_blank"><h4>Students' Comments</a>
+</h4>
 </div>
 </body>
-
 </html>
-
-
-
-
-
-
-
-
-
-
