--- a/schoolsongs.html
+++ b/schoolsongs.html
@@ -3,26 +3,25 @@
 <head>
 <title>www.ukss.ac.tz</title>
 <style>
+h2{
+text-align:center;
+}
 h3{
-text-align:center;
-}
-h4{
-text-align:center;
-}
-h5{
-text-align:center;
-}
-ul{
 text-align:center;
 }
 </style>
 </head>
+
 <body>
-<h4>Nyimbo Za Uzalendo Za Taifa</h4>
-<ul>
-<li><a href="nationalsongs.html">National Songs</a></li>
+<h2>Nyimbo Za Uzalendo Za Taifa</h2>
+
+<h3>
+<a href="nationalsongs.html">National Songs</a>
 <br><br>
-<li><a href="graduationalsongs.html">School Songs</a></li>
-</ul>
+<a href="graduationalsongs.html">School Songs</a>
+<br><br>
+<a href="othersongs.html">Other Songs</a>
+</h3>
+
 </body>
 </html>
