Fix HTML formatting and structure

--- a/headprefectspage.html
+++ b/headprefectspage.html
@@ -28,9 +28,10 @@ text-align:center;
 <a href="Current-leadership.html">Wafahamu Viongozi wa sasa <br> (View Current Students' Leaders)</a>
 <br><br><br><br>
 
-<a href="students-admins.html" target="_blank">Tazama Maoni ya Wanafunzi <br> (View Students' Comments)</a>
+<a href="students-admins.html">Tazama Maoni ya Wanafunzi <br> (View Students' Comments)</a>
 </h4>
 </body>
 </html>
 </body>
+
 </html>
