--- a/right.html
+++ b/right.html
@@ -11,7 +11,7 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:18px;}
 <div class="right">
 <h3>Only for Registered Students</h3>
 <h4>
-<a href="headprefectspage.html" target="_blank"><h4>Students' Leadership</a>
+<a href="headprefectspage.html"><h4>Students' Leadership</a>
 <br>
 <a href="https://kplus712.github.io/UKSS-/" target="_blank"><h4>Students' Election</a>
 <br>
@@ -21,4 +21,5 @@ padding:20px; text-align:center;background-color:#c0c0c0;font-size:18px;}
 </h4>
 </div>
 </body>
+
 </html>
