Fix HTML formatting and update motto capitalization

--- a/header.html
+++ b/header.html
@@ -13,11 +13,12 @@ Welcome at Umoja King'ori Secondary School
 <img src="uhuru na umoja.png" align="left" width="120px" height="125px">
 <img src="logo.png" align="right" width="120px" height="125px">
 </h1>
-<h3>"Our Motto: Enter to Learn, Leave to Serve"</h3>
+<h3>"Our Motto: Enter To Learn, Leave To Serve"</h3>
 </div>
 </body>
 
 </html>
+
 
 
 
